# structsure

./: .gitignore  README.md  pyproject.toml
docs/: monetization.md
examples/: local_tasks_demo.py  resume_extraction_demo.py  schema_designer_app.py  simple_usage.py
structsure/: __init__.py  cli.py  core.py  exceptions.py  mcp_server.py  pro.py  schema.py  schema_designer_app.py
structsure/server/: api.py  db.py  main.py  models.py
structsure/server/templates/: base.html  index.html  schema.html
tests/: test_core.py
