[project]
name = "structsure"
version = "0.1.0"
description = "A simple, reliable library for getting structured JSON output from LLMs with self-correction."
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.3",
]
ollama = [
    "ollama>=0.1.7",
]
mcp = [
    "mcp>=0.3.1",
]
streamlit = [
    "streamlit>=1.31",
    "genson>=1.2.2",
]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.1",
    "jinja2>=3.1",
]
pro = [
    "licenzy>=1.0.0",
]

[project.scripts]
structsure = "structsure.cli:main"
structsure-mcp = "structsure.mcp_server:main"
structsure-api = "structsure.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["structsure"]
